:recycle: Fix openapi
headerをh.Wsの引数に含めるようにした
