# interfaces/handler/ws.go
@@ -4,14 +4,11 @@ import (
 	"net/http"
 
 	"github.com/21hack02win/nascalay-backend/model"
-	"github.com/gofrs/uuid"
 	"github.com/labstack/echo/v4"
 )
 
-func (h *handler) Ws(c echo.Context) error {
-	userId := c.Request().Header.Get("Nascalay-User")
-
-	err := h.stream.ServeWS(c.Response().Writer, c.Request(), model.UserId(uuid.FromStringOrNil(userId)))
+func (h *handler) Ws(c echo.Context, params WsParams) error {
+	err := h.stream.ServeWS(c.Response().Writer, c.Request(), model.UserId(params.NascalayUser))
 	if err != nil {
 		c.Logger().Error(err)
 		return newEchoHTTPError(err)
